--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Leap Year</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Leap Year Identifier</h1>
+        <p>Enter a year my friend!!</p>
+      </div>
+      <form id="leap">
+        <div class="form-group">
+          <label for="year-input">Please enter a year!</label>
+          <input id="year-input" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-danger">SUBMIT</button>
+      </form>
 
   </body>
 </html>
